--- a/notebooks/05-Audio-Data-Report.ipynb
+++ b/notebooks/05-Audio-Data-Report.ipynb
@@ -23,7 +23,8 @@
    "metadata": {},
    "source": [
     "## 3. What was the optimal number of clusters in your cluster model? Explain how you determined this value.\n",
-    "\n"
+    "\n",
+    "The optimal number of clusters in my cluster model was determined using the elbow method. The optimal number of clusters is typically chosen at the point where the rate of decrease in the within-cluster sum of squares (WCSS) starts to slow down significantly. In this case, it was 3. \n"
    ]
   },
   {
@@ -31,7 +32,10 @@
    "metadata": {},
    "source": [
     "## 4. Take a look at the respective songs that fell into your clusters. Describe these clusters in human terms to the best of your ability using the columns in your dataset (for example high-gospel songs, low-gospel songs, etc). Feel free to listen to these songs as well to get a sense of what nuance your algorithm picked up on.\n",
-    "\n"
+    "\n",
+    "Cluster 0 = high acousticness, associated with the genres of hip hop, pop, and rock  \n",
+    "Cluster 1 = high valence, associated with the genres of pop and hip hop \n",
+    "Cluster 2 = high energy, associated with the genres of pop and hip hop "
    ]
   },
   {
@@ -39,7 +43,10 @@
    "metadata": {},
    "source": [
     "## 5. Take a look at the clusters that your algorithm assigned to your test samples. Based on these clusters, which songs would you recommend to this user?\n",
-    "\n"
+    "\n",
+    "Cluster 0 = pop\tparamore- playing god\n",
+    "Cluster 1 = dennis brown- second chance\n",
+    "Cluster 2 = rage against the machine- pistol grip pump"
    ]
   }
  ],
