--- a/notebooks/03-Audio-Data-Modeling.ipynb
+++ b/notebooks/03-Audio-Data-Modeling.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2498,7 +2498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2871,7 +2871,7 @@
        "[28372 rows x 25 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2931,7 +2931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2950,417 +2950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>artist_name</th>\n",
-       "      <th>track_name</th>\n",
-       "      <th>release_date</th>\n",
-       "      <th>genre</th>\n",
-       "      <th>lyrics</th>\n",
-       "      <th>len</th>\n",
-       "      <th>dating</th>\n",
-       "      <th>violence</th>\n",
-       "      <th>world/life</th>\n",
-       "      <th>...</th>\n",
-       "      <th>sadness</th>\n",
-       "      <th>feelings</th>\n",
-       "      <th>danceability</th>\n",
-       "      <th>loudness</th>\n",
-       "      <th>acousticness</th>\n",
-       "      <th>instrumentalness</th>\n",
-       "      <th>valence</th>\n",
-       "      <th>energy</th>\n",
-       "      <th>topic</th>\n",
-       "      <th>age</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>mukesh</td>\n",
-       "      <td>mohabbat bhi jhoothi</td>\n",
-       "      <td>1950</td>\n",
-       "      <td>pop</td>\n",
-       "      <td>hold time feel break feel untrue convince spea...</td>\n",
-       "      <td>95</td>\n",
-       "      <td>0.000598</td>\n",
-       "      <td>0.063746</td>\n",
-       "      <td>0.000598</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.380299</td>\n",
-       "      <td>0.117175</td>\n",
-       "      <td>0.357739</td>\n",
-       "      <td>0.454119</td>\n",
-       "      <td>0.997992</td>\n",
-       "      <td>0.901822</td>\n",
-       "      <td>0.339448</td>\n",
-       "      <td>0.137110</td>\n",
-       "      <td>sadness</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4</td>\n",
-       "      <td>frankie laine</td>\n",
-       "      <td>i believe</td>\n",
-       "      <td>1950</td>\n",
-       "      <td>pop</td>\n",
-       "      <td>believe drop rain fall grow believe darkest ni...</td>\n",
-       "      <td>51</td>\n",
-       "      <td>0.035537</td>\n",
-       "      <td>0.096777</td>\n",
-       "      <td>0.443435</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.001284</td>\n",
-       "      <td>0.001284</td>\n",
-       "      <td>0.331745</td>\n",
-       "      <td>0.647540</td>\n",
-       "      <td>0.954819</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>0.325021</td>\n",
-       "      <td>0.263240</td>\n",
-       "      <td>world/life</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6</td>\n",
-       "      <td>johnnie ray</td>\n",
-       "      <td>cry</td>\n",
-       "      <td>1950</td>\n",
-       "      <td>pop</td>\n",
-       "      <td>sweetheart send letter goodbye secret feel bet...</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0.002770</td>\n",
-       "      <td>0.002770</td>\n",
-       "      <td>0.002770</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.002770</td>\n",
-       "      <td>0.225422</td>\n",
-       "      <td>0.456298</td>\n",
-       "      <td>0.585288</td>\n",
-       "      <td>0.840361</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.351814</td>\n",
-       "      <td>0.139112</td>\n",
-       "      <td>music</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10</td>\n",
-       "      <td>pérez prado</td>\n",
-       "      <td>patricia</td>\n",
-       "      <td>1950</td>\n",
-       "      <td>pop</td>\n",
-       "      <td>kiss lips want stroll charm mambo chacha merin...</td>\n",
-       "      <td>54</td>\n",
-       "      <td>0.048249</td>\n",
-       "      <td>0.001548</td>\n",
-       "      <td>0.001548</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.225889</td>\n",
-       "      <td>0.001548</td>\n",
-       "      <td>0.686992</td>\n",
-       "      <td>0.744404</td>\n",
-       "      <td>0.083935</td>\n",
-       "      <td>0.199393</td>\n",
-       "      <td>0.775350</td>\n",
-       "      <td>0.743736</td>\n",
-       "      <td>romantic</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>12</td>\n",
-       "      <td>giorgos papadopoulos</td>\n",
-       "      <td>apopse eida oneiro</td>\n",
-       "      <td>1950</td>\n",
-       "      <td>pop</td>\n",
-       "      <td>till darling till matter know till dream live ...</td>\n",
-       "      <td>48</td>\n",
-       "      <td>0.001350</td>\n",
-       "      <td>0.001350</td>\n",
-       "      <td>0.417772</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.068800</td>\n",
-       "      <td>0.001350</td>\n",
-       "      <td>0.291671</td>\n",
-       "      <td>0.646489</td>\n",
-       "      <td>0.975904</td>\n",
-       "      <td>0.000246</td>\n",
-       "      <td>0.597073</td>\n",
-       "      <td>0.394375</td>\n",
-       "      <td>romantic</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28367</th>\n",
-       "      <td>82447</td>\n",
-       "      <td>mack 10</td>\n",
-       "      <td>10 million ways</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>hip hop</td>\n",
-       "      <td>cause fuck leave scar tick tock clock come kno...</td>\n",
-       "      <td>78</td>\n",
-       "      <td>0.001350</td>\n",
-       "      <td>0.001350</td>\n",
-       "      <td>0.001350</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.065664</td>\n",
-       "      <td>0.001350</td>\n",
-       "      <td>0.889527</td>\n",
-       "      <td>0.759711</td>\n",
-       "      <td>0.062549</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.751649</td>\n",
-       "      <td>0.695686</td>\n",
-       "      <td>obscene</td>\n",
-       "      <td>0.014286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28368</th>\n",
-       "      <td>82448</td>\n",
-       "      <td>m.o.p.</td>\n",
-       "      <td>ante up (robbin hoodz theory)</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>hip hop</td>\n",
-       "      <td>minks things chain ring braclets yap fame come...</td>\n",
-       "      <td>67</td>\n",
-       "      <td>0.001284</td>\n",
-       "      <td>0.001284</td>\n",
-       "      <td>0.035338</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.001284</td>\n",
-       "      <td>0.001284</td>\n",
-       "      <td>0.662082</td>\n",
-       "      <td>0.789580</td>\n",
-       "      <td>0.004607</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>0.922712</td>\n",
-       "      <td>0.797791</td>\n",
-       "      <td>obscene</td>\n",
-       "      <td>0.014286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28369</th>\n",
-       "      <td>82449</td>\n",
-       "      <td>nine</td>\n",
-       "      <td>whutcha want?</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>hip hop</td>\n",
-       "      <td>get ban get ban stick crack relax plan attack ...</td>\n",
-       "      <td>77</td>\n",
-       "      <td>0.001504</td>\n",
-       "      <td>0.154302</td>\n",
-       "      <td>0.168988</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.001504</td>\n",
-       "      <td>0.001504</td>\n",
-       "      <td>0.663165</td>\n",
-       "      <td>0.726970</td>\n",
-       "      <td>0.104417</td>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>0.838211</td>\n",
-       "      <td>0.767761</td>\n",
-       "      <td>obscene</td>\n",
-       "      <td>0.014286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28370</th>\n",
-       "      <td>82450</td>\n",
-       "      <td>will smith</td>\n",
-       "      <td>switch</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>hip hop</td>\n",
-       "      <td>check check yeah yeah hear thing call switch g...</td>\n",
-       "      <td>67</td>\n",
-       "      <td>0.001196</td>\n",
-       "      <td>0.001196</td>\n",
-       "      <td>0.001196</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.001196</td>\n",
-       "      <td>0.001196</td>\n",
-       "      <td>0.883028</td>\n",
-       "      <td>0.786888</td>\n",
-       "      <td>0.007027</td>\n",
-       "      <td>0.000503</td>\n",
-       "      <td>0.508450</td>\n",
-       "      <td>0.885882</td>\n",
-       "      <td>obscene</td>\n",
-       "      <td>0.014286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28371</th>\n",
-       "      <td>82451</td>\n",
-       "      <td>jeezy</td>\n",
-       "      <td>r.i.p.</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>hip hop</td>\n",
-       "      <td>remix killer alive remix thriller trap bitch s...</td>\n",
-       "      <td>83</td>\n",
-       "      <td>0.001012</td>\n",
-       "      <td>0.075202</td>\n",
-       "      <td>0.001012</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.001012</td>\n",
-       "      <td>0.033995</td>\n",
-       "      <td>0.828875</td>\n",
-       "      <td>0.674794</td>\n",
-       "      <td>0.015862</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.475474</td>\n",
-       "      <td>0.492477</td>\n",
-       "      <td>obscene</td>\n",
-       "      <td>0.014286</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>28372 rows × 31 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Unnamed: 0           artist_name                     track_name  \\\n",
-       "0               0                mukesh           mohabbat bhi jhoothi   \n",
-       "1               4         frankie laine                      i believe   \n",
-       "2               6           johnnie ray                            cry   \n",
-       "3              10           pérez prado                       patricia   \n",
-       "4              12  giorgos papadopoulos             apopse eida oneiro   \n",
-       "...           ...                   ...                            ...   \n",
-       "28367       82447               mack 10                10 million ways   \n",
-       "28368       82448                m.o.p.  ante up (robbin hoodz theory)   \n",
-       "28369       82449                  nine                  whutcha want?   \n",
-       "28370       82450            will smith                         switch   \n",
-       "28371       82451                 jeezy                         r.i.p.   \n",
-       "\n",
-       "       release_date    genre  \\\n",
-       "0              1950      pop   \n",
-       "1              1950      pop   \n",
-       "2              1950      pop   \n",
-       "3              1950      pop   \n",
-       "4              1950      pop   \n",
-       "...             ...      ...   \n",
-       "28367          2019  hip hop   \n",
-       "28368          2019  hip hop   \n",
-       "28369          2019  hip hop   \n",
-       "28370          2019  hip hop   \n",
-       "28371          2019  hip hop   \n",
-       "\n",
-       "                                                  lyrics  len    dating  \\\n",
-       "0      hold time feel break feel untrue convince spea...   95  0.000598   \n",
-       "1      believe drop rain fall grow believe darkest ni...   51  0.035537   \n",
-       "2      sweetheart send letter goodbye secret feel bet...   24  0.002770   \n",
-       "3      kiss lips want stroll charm mambo chacha merin...   54  0.048249   \n",
-       "4      till darling till matter know till dream live ...   48  0.001350   \n",
-       "...                                                  ...  ...       ...   \n",
-       "28367  cause fuck leave scar tick tock clock come kno...   78  0.001350   \n",
-       "28368  minks things chain ring braclets yap fame come...   67  0.001284   \n",
-       "28369  get ban get ban stick crack relax plan attack ...   77  0.001504   \n",
-       "28370  check check yeah yeah hear thing call switch g...   67  0.001196   \n",
-       "28371  remix killer alive remix thriller trap bitch s...   83  0.001012   \n",
-       "\n",
-       "       violence  world/life  ...   sadness  feelings  danceability  loudness  \\\n",
-       "0      0.063746    0.000598  ...  0.380299  0.117175      0.357739  0.454119   \n",
-       "1      0.096777    0.443435  ...  0.001284  0.001284      0.331745  0.647540   \n",
-       "2      0.002770    0.002770  ...  0.002770  0.225422      0.456298  0.585288   \n",
-       "3      0.001548    0.001548  ...  0.225889  0.001548      0.686992  0.744404   \n",
-       "4      0.001350    0.417772  ...  0.068800  0.001350      0.291671  0.646489   \n",
-       "...         ...         ...  ...       ...       ...           ...       ...   \n",
-       "28367  0.001350    0.001350  ...  0.065664  0.001350      0.889527  0.759711   \n",
-       "28368  0.001284    0.035338  ...  0.001284  0.001284      0.662082  0.789580   \n",
-       "28369  0.154302    0.168988  ...  0.001504  0.001504      0.663165  0.726970   \n",
-       "28370  0.001196    0.001196  ...  0.001196  0.001196      0.883028  0.786888   \n",
-       "28371  0.075202    0.001012  ...  0.001012  0.033995      0.828875  0.674794   \n",
-       "\n",
-       "       acousticness  instrumentalness   valence    energy       topic  \\\n",
-       "0          0.997992          0.901822  0.339448  0.137110     sadness   \n",
-       "1          0.954819          0.000002  0.325021  0.263240  world/life   \n",
-       "2          0.840361          0.000000  0.351814  0.139112       music   \n",
-       "3          0.083935          0.199393  0.775350  0.743736    romantic   \n",
-       "4          0.975904          0.000246  0.597073  0.394375    romantic   \n",
-       "...             ...               ...       ...       ...         ...   \n",
-       "28367      0.062549          0.000000  0.751649  0.695686     obscene   \n",
-       "28368      0.004607          0.000002  0.922712  0.797791     obscene   \n",
-       "28369      0.104417          0.000001  0.838211  0.767761     obscene   \n",
-       "28370      0.007027          0.000503  0.508450  0.885882     obscene   \n",
-       "28371      0.015862          0.000000  0.475474  0.492477     obscene   \n",
-       "\n",
-       "            age  \n",
-       "0      1.000000  \n",
-       "1      1.000000  \n",
-       "2      1.000000  \n",
-       "3      1.000000  \n",
-       "4      1.000000  \n",
-       "...         ...  \n",
-       "28367  0.014286  \n",
-       "28368  0.014286  \n",
-       "28369  0.014286  \n",
-       "28370  0.014286  \n",
-       "28371  0.014286  \n",
-       "\n",
-       "[28372 rows x 31 columns]"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "audio_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3371,7 +2961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3744,7 +3334,7 @@
        "[28372 rows x 26 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4929,6 +4519,15 @@
    ],
    "source": [
     "info[audio_2['Cluster'] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audio_2.to_csv('train.csv', index=False)"
    ]
   }
  ],
