--- a/notebooks/05-Audio-Data-Report.ipynb
+++ b/notebooks/05-Audio-Data-Report.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## 1. Which insights did you gain from your EDA? Were any columns highly correlated? If so, name them.\n",
     "\n",
-    "From the EDA it could be seen that fortunately there were no null values to drop from the dataset. From the correlation matrix, it could be seen that the 'loudness' and 'energy' columns had some of the highest correlation with each other in the entire dataset. "
+    "From the EDA it could be seen that fortunately there were no null values to drop from the dataset. From the correlation matrix, it could be seen that the 'len' and 'obscene' columns had some of the highest correlation with each other in the entire dataset. "
    ]
   },
   {
@@ -33,9 +33,9 @@
    "source": [
     "## 4. Take a look at the respective songs that fell into your clusters. Describe these clusters in human terms to the best of your ability using the columns in your dataset (for example high-gospel songs, low-gospel songs, etc). Feel free to listen to these songs as well to get a sense of what nuance your algorithm picked up on.\n",
     "\n",
-    "Cluster 0 = high acousticness, associated with the genres of hip hop, pop, and rock  \n",
-    "Cluster 1 = high valence, associated with the genres of pop and hip hop \n",
-    "Cluster 2 = high energy, associated with the genres of pop and hip hop "
+    "Cluster 0 = high violence and sadness, associated with the genres of hip hop and pop  \n",
+    "Cluster 1 = high age and low release date, associated with the genres of pop and rock \n",
+    "Cluster 2 = high obscenity, associated with the genres of pop and hip hop "
    ]
   },
   {
@@ -44,9 +44,9 @@
    "source": [
     "## 5. Take a look at the clusters that your algorithm assigned to your test samples. Based on these clusters, which songs would you recommend to this user?\n",
     "\n",
-    "Cluster 0 = pop\tparamore- playing god\n",
-    "Cluster 1 = dennis brown- second chance\n",
-    "Cluster 2 = rage against the machine- pistol grip pump"
+    "Cluster 0 = jerry lee lewis- your cheating heart\n",
+    "Cluster 1 = rage against the machine- pistol grip pump\t\n",
+    "Cluster 2 = paramore- playing god"
    ]
   }
  ],
